add font-family: Unkempt;

--- a/src/Components/UserMenu/userMenu.module.css
+++ b/src/Components/UserMenu/userMenu.module.css
@@ -3,6 +3,7 @@
   align-items: center;
   padding: 4px 8px;
   margin-left: 10px;
+  font-family: Unkempt;
   border: none;
   border-radius: 4px;
   color: #fff;
