--- a/src/Components/ContactList/contactList.module.css
+++ b/src/Components/ContactList/contactList.module.css
@@ -23,6 +23,7 @@
   align-items: center;
   padding: 4px 8px;
   margin-left: auto;
+  font-family: Unkempt;
   border: none;
   border-radius: 4px;
   color: #fff;
