--- a/src/Components/AuthNav/AuthNav.module.css
+++ b/src/Components/AuthNav/AuthNav.module.css
@@ -1,10 +1,12 @@
 .container {
   display: flex;
-
   margin-left: auto;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .link {
+  display: inline-flex;
   text-decoration: none;
   margin-left: 16px;
   color: var(--primary-color);
