--- a/src/Components/AuthNav/AuthNav.module.css
+++ b/src/Components/AuthNav/AuthNav.module.css
@@ -15,3 +15,12 @@
 .activeLink {
   color: var(--activ-color);
 }
+
+.avatar {
+  display: flex;
+  font-size: 20px;
+  padding: 2px;
+  border: 1px solid var(--activ-color);
+  border-radius: 50%;
+  color: var(--activ-color);
+}
