adding css from button

--- a/src/Components/Form/form.module.css
+++ b/src/Components/Form/form.module.css
@@ -45,7 +45,10 @@
 
 .button:hover,
 .button:focus {
+  color: var(--primary-color);
+  background-color: #fff;
   transform: scale(1.06);
   box-shadow: 2px 2px 4px 1px rgba(0, 0, 0, 0.3);
-  transition: transform 250ms var(--cubic), box-shadow 250ms var(--cubic);
+  transition: transform 250ms var(--cubic), box-shadow 250ms var(--cubic),
+    background-color 250ms var(--cubic), color 250ms var(--cubic);
 }
