--- a/src/Components/UserMenu/userMenu.module.css
+++ b/src/Components/UserMenu/userMenu.module.css
@@ -1,5 +1,6 @@
 .container {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-around;
 }
@@ -9,7 +10,6 @@
   align-items: center;
   padding: 4px 8px;
   margin-left: 10px;
-  font-family: Unkempt;
   border: none;
   border-radius: 4px;
   color: #fff;
@@ -21,28 +21,36 @@
 
 .button:hover,
 .button:focus {
+  color: var(--primary-color);
+  background-color: #fff;
   transform: scale(1.06);
   box-shadow: 2px 2px 4px 1px rgba(0, 0, 0, 0.3);
-  transition: transform 250ms var(--cubic), box-shadow 250ms var(--cubic);
+  transition: transform 250ms var(--cubic), box-shadow 250ms var(--cubic),
+    background-color 250ms var(--cubic), color 250ms var(--cubic);
 }
 
 .span {
+  display: none;
   font-size: 14px;
   margin-left: 16px;
   color: var(--primary-color);
+}
+
+@media screen and (min-width: 768px) {
+  .span {
+    display: block;
+  }
 }
 
 .avatar {
   display: flex;
   font-size: 20px;
   padding: 2px;
-  border: 1px solid var(--activ-color);
   border-radius: 50%;
-  color: var(--activ-color);
-}
-
-.avatar:hover,
-.avatar:focus {
   color: #33ff00;
   border: 1px solid #33ff00;
+}
+
+.sp {
+  font-family: Unkempt;
 }
