--- a/src/Components/AuthNav/AuthNav.module.css
+++ b/src/Components/AuthNav/AuthNav.module.css
@@ -13,7 +13,7 @@
 }
 
 .activeLink {
-  color: var(--activ-color);
+  color: var(--orange-color);
 }
 
 .avatar {
@@ -23,4 +23,10 @@
   border-radius: 50%;
   color: #ff0000;
   border: 1px solid #ff0000;
+}
+
+.link:hover,
+.link:focus {
+  text-decoration: underline;
+  color: var(--orange-color);
 }
