--- a/src/Components/Filter/filter.module.css
+++ b/src/Components/Filter/filter.module.css
@@ -1,5 +1,8 @@
 .container {
-  margin-left: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   margin-bottom: 14px;
 }
 
@@ -11,7 +14,13 @@
 
 .input {
   min-width: 200px;
+  max-width: 280px;
   outline-color: var(--primary-color);
+}
+
+.input:focus {
+  outline: 2px solid var(--primary-color);
+  outline-offset: unset;
 }
 
 .find {
