--- a/src/Components/Form/form.module.css
+++ b/src/Components/Form/form.module.css
@@ -1,7 +1,12 @@
 .container {
   display: block;
-  margin-left: 10px;
   margin-bottom: 14px;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .label {
@@ -28,12 +33,18 @@
   outline-color: var(--primary-color);
 }
 
+.input:focus {
+  outline: 2px solid var(--primary-color);
+  outline-offset: unset;
+}
+
 .button {
   display: inline-flex;
   align-items: center;
   padding: 4px 8px;
-  margin-left: 10px;
-  font-family: Unkempt;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: var(--font-family);
   border: none;
   border-radius: 4px;
   color: #fff;
