--- a/src/Components/Login/login.module.css
+++ b/src/Components/Login/login.module.css
@@ -1,7 +1,19 @@
+.thumb {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .container {
   display: block;
-  margin-left: 10px;
+  margin-top: 14px;
   margin-bottom: 14px;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
 }
 
 .label {
@@ -15,6 +27,11 @@
   outline-color: var(--primary-color);
 }
 
+.input:focus {
+  outline: 2px solid var(--primary-color);
+  outline-offset: unset;
+}
+
 .spanName {
   font-size: 12px;
   margin-left: 6px;
@@ -25,8 +42,9 @@
   display: inline-flex;
   align-items: center;
   padding: 4px 8px;
-  margin-left: 10px;
-  font-family: Unkempt;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: var(--font-family);
   border: none;
   border-radius: 4px;
   color: #fff;
