--- a/src/Components/Registration/registration.module.css
+++ b/src/Components/Registration/registration.module.css
@@ -1,3 +1,15 @@
+.thumb {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+}
+
 .container {
   display: block;
   margin-left: 10px;
@@ -15,6 +27,11 @@
   outline-color: var(--primary-color);
 }
 
+.input:focus {
+  outline: 2px solid var(--primary-color);
+  outline-offset: unset;
+}
+
 .spanName {
   font-size: 12px;
   margin-left: 6px;
@@ -25,7 +42,8 @@
   display: inline-flex;
   align-items: center;
   padding: 4px 8px;
-  margin-left: 10px;
+  margin-left: auto;
+  margin-right: auto;
   font-family: var(--font-family);
   border: none;
   border-radius: 4px;
