--- a/src/Components/UserMenu/userMenu.module.css
+++ b/src/Components/UserMenu/userMenu.module.css
@@ -10,6 +10,7 @@
   align-items: center;
   padding: 4px 8px;
   margin-left: 10px;
+  font-family: var(--font-family);
   border: none;
   border-radius: 4px;
   color: #fff;
