--- a/src/Components/AuthNav/AuthNav.module.css
+++ b/src/Components/AuthNav/AuthNav.module.css
@@ -8,8 +8,37 @@
 .link {
   display: inline-flex;
   text-decoration: none;
+  position: relative;
   margin-left: 16px;
   color: var(--primary-color);
+  /* overflow: hidden; */
+}
+
+.link:after {
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: -4px;
+  left: 0;
+  width: 0%;
+  height: 2px;
+  background-color: var(--orange-color);
+  border-radius: 2px;
+
+  /* transform: scaleX(0%); */
+  transition: width 300ms var(--cubic);
+}
+
+.link:hover,
+.link:focus {
+  color: var(--orange-color);
+}
+
+.link:hover:after,
+.link:focus:after {
+  width: 100%;
+  /* transform: scaleX(100%); */
+  transition: width 300ms var(--cubic);
 }
 
 .activeLink {
@@ -23,10 +52,4 @@
   border-radius: 50%;
   color: #ff0000;
   border: 1px solid #ff0000;
-}
-
-.link:hover,
-.link:focus {
-  text-decoration: underline;
-  color: var(--orange-color);
 }
