--- a/src/Components/Form/form.module.css
+++ b/src/Components/Form/form.module.css
@@ -44,9 +44,9 @@
   padding: 4px 8px;
   margin-left: auto;
   margin-right: auto;
-  font-family: var(--font-family);
+  font-family: Unkempt;
   border: none;
-  border-radius: 4px;
+  border-radius: 6px;
   color: #fff;
   cursor: pointer;
   outline: none;
