--- a/src/Components/Filter/filter.module.css
+++ b/src/Components/Filter/filter.module.css
@@ -14,13 +14,14 @@
 
 .input {
   min-width: 200px;
-  max-width: 280px;
-  outline-color: var(--primary-color);
+  padding: 4px;
+  border: none;
+  outline: 1px solid var(--primary-color);
 }
 
 .input:focus {
-  outline: 2px solid var(--primary-color);
-  outline-offset: unset;
+  outline: none;
+  border-bottom: 1px solid var(--primary-color);
 }
 
 .find {
