--- a/src/Components/ContactList/contactList.module.css
+++ b/src/Components/ContactList/contactList.module.css
@@ -28,6 +28,7 @@
   padding: 4px 8px;
   margin-left: auto;
   font-family: Unkempt;
+  font-weight: 700;
   border: none;
   border-radius: 6px;
   color: #fff;
