--- a/src/Components/Form/form.module.css
+++ b/src/Components/Form/form.module.css
@@ -47,6 +47,7 @@
   margin-left: auto;
   margin-right: auto;
   font-family: Unkempt;
+  font-weight: 700;
   border: none;
   border-radius: 6px;
   color: #fff;
