--- a/src/Components/Registration/registration.module.css
+++ b/src/Components/Registration/registration.module.css
@@ -47,6 +47,7 @@
   margin-left: auto;
   margin-right: auto;
   font-family: var(--font-family);
+  font-weight: 700;
   border: none;
   border-radius: 6px;
   color: #fff;
