--- a/src/Components/UserMenu/userMenu.module.css
+++ b/src/Components/UserMenu/userMenu.module.css
@@ -11,6 +11,7 @@
   padding: 4px 8px;
   margin-left: 10px;
   font-family: var(--font-family);
+  font-weight: 700;
   border: none;
   border-radius: 6px;
   color: #fff;
