--- a/src/Components/AuthNav/AuthNav.module.css
+++ b/src/Components/AuthNav/AuthNav.module.css
@@ -10,6 +10,7 @@
   text-decoration: none;
   position: relative;
   margin-left: 16px;
+  font-weight: 600;
   color: var(--primary-color);
   outline: none;
   /* overflow: hidden; */
@@ -49,8 +50,5 @@
 .avatar {
   display: flex;
   font-size: 20px;
-  padding: 2px;
-  border-radius: 50%;
   color: #ff0000;
-  border: 1px solid #ff0000;
 }
