add sort in contactList

--- a/src/Components/Filter/filter.module.css
+++ b/src/Components/Filter/filter.module.css
@@ -17,6 +17,7 @@
   padding: 4px;
   border: none;
   outline: 1px solid var(--primary-color);
+  border-bottom: 1px solid transparent;
 }
 
 .input:focus {
