--- a/src/Components/ContactList/contactList.module.css
+++ b/src/Components/ContactList/contactList.module.css
@@ -20,6 +20,7 @@
   display: inline-flex;
   font-size: 16px;
   margin: 0;
+  color: #303030;
 }
 
 .button {
@@ -59,4 +60,14 @@
   align-self: flex-end;
 
   background: rgba(130, 130, 230, 0.5);
+}
+
+.descr {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .descr {
+    display: block;
+  }
 }
