--- a/src/Components/Form/form.module.css
+++ b/src/Components/Form/form.module.css
@@ -33,6 +33,7 @@
   padding: 4px;
   border: none;
   outline: 1px solid var(--primary-color);
+  border-bottom: 1px solid transparent;
 }
 
 .input:focus {
