--- a/src/Components/Stats/stats.module.css
+++ b/src/Components/Stats/stats.module.css
@@ -6,9 +6,9 @@
 .text {
   margin: 0;
   text-align: center;
-  color: var(--activ-color);
+  color: #303030;
 }
 
 .span {
-  color: var(--primary-color);
+  color: var(--activ-color);
 }
